SdPlugin: Add util def `addOpensForTest` & `javaVersion`